fix: delete should also remove from cache
