# docs/swagger.yaml
@@ -12,18 +12,40 @@ definitions:
         example: https://me.li/abc123
         type: string
     type: object
-  handler.GetURLResponse:
+  handler.GetMetadataResponse:
     properties:
+      number_of_access:
+        type: integer
       original_url:
         type: string
       short_url:
         type: string
     type: object
-  utils.ErrorResponse:
+  utils.BadRequestErrorResponse:
     properties:
       message:
+        example: Bad request
         type: string
       status:
+        example: 400
+        type: integer
+    type: object
+  utils.ConflictErrorResponse:
+    properties:
+      message:
+        example: Conflict
+        type: string
+      status:
+        example: 409
+        type: integer
+    type: object
+  utils.NotFoundErrorResponse:
+    properties:
+      message:
+        example: URL not found
+        type: string
+      status:
+        example: 404
         type: integer
     type: object
 host: localhost:3333
@@ -59,14 +81,14 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/handler.GenerateShortURLResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.BadRequestErrorResponse'
         "409":
           description: Conflict
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/utils.ConflictErrorResponse'
       summary: Generate a short URL
       tags:
       - URL
@@ -92,28 +114,48 @@ paths:
       responses:
         "204":
           description: No Content
-        "500":
-          description: Internal Server Error
+        "404":
+          description: Not Found
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/utils.NotFoundErrorResponse'
       summary: Delete a URL entry
       tags:
       - URL
     get:
       consumes:
       - application/json
-      description: Get a URL entry by providing either the original URL or the short
-        URL
+      description: Get the original url from the shortened url and redirect to it
       parameters:
-      - description: URL to be deleted
+      - description: URL to get metadata for
         in: query
         name: url
         required: true
         type: string
-      - description: Type of URL to be deleted (short_url or original_url)
+      produces:
+      - application/json
+      responses:
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.NotFoundErrorResponse'
+      summary: Get a URL entry
+      tags:
+      - URL
+  /url/metadata:
+    get:
+      consumes:
+      - application/json
+      description: Get information about any URL entry by providing the original URL
+        or the shortened URL
+      parameters:
+      - description: URL to get metadata for
+        in: query
+        name: url
+        required: true
+        type: string
+      - description: Type of URL (short_url or original_url)
         in: query
         name: type
-        required: true
         type: string
       produces:
       - application/json
@@ -121,15 +163,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.GetURLResponse'
+            $ref: '#/definitions/handler.GetMetadataResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/utils.NotFoundErrorResponse'
       summary: Get a URL entry
       tags:
       - URL
